--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ ol {
 -----------------------*/
 
 .header {
-	background: rgba(42, 1, 74, 0.5);
+	background: rgba(42, 1, 74, 0.1);
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -399,7 +399,7 @@ ol {
 -----------------------*/
 
 .hero {
-	padding-top: 400px;
+	padding-top: 320px;
 	padding-bottom: 295px;
 	position: relative;
 }
@@ -411,7 +411,8 @@ ol {
 .hero__text span {
 	color: #ffffff;
 	text-transform: uppercase;
-	letter-spacing: 6px;
+	letter-spacing: 8px;
+	font-weight: bolder;
 }
 
 .hero__text h1 {
@@ -425,6 +426,7 @@ ol {
 .hero__text p {
 	color: #ffffff;
 	margin-bottom: 20px;
+	font-weight: bolder;
 }
 
 .hero__text .play-btn {
